--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,4 @@
-<footer>
+<!-- <footer>
   <div class="f-info">
     <div class="f-info-socials">
       <i class="fa-brands fa-square-facebook"></i>
@@ -9,6 +9,29 @@
     <div class="f-info-links">
       <a href="/privacy">privacy</a>
       <a href="/terms">terms</a>
+    </div>
+  </div>
+</footer> -->
+
+<footer>
+  <div class="f-info">
+    <div class="f-info-socials">
+      <i class="fa-brands fa-facebook" style="color: rgb(16, 108, 221)"></i>
+      <i
+        class="fa-brands fa-square-instagram"
+        style="color: rgb(232, 20, 20)"
+      ></i>
+
+      <i class="fa-brands fa-twitter" style="color: rgb(38, 195, 253)"></i>
+      <i class="fa-brands fa-pinterest" style="color: brown"></i>
+      <i class="fa-brands fa-linkedin" style="color: rgb(6, 101, 123)"></i>
+    </div>
+    <div class="f-info-brand">&copy; WanderLust Private Limited</div>
+    <div class="f-info-brand">Made by Sanket Dhengre</div>
+    <div class="f-info-links">
+      <a href="">Privacy</a>&nbsp;&nbsp; <a href="">Terms</a>&nbsp;&nbsp
+      <a href="">Sitemap</a>&nbsp;&nbsp
+      <a href="">Company details</a>&nbsp;&nbsp
     </div>
   </div>
 </footer>
