--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -50,11 +50,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="rooms"
                 name="listing[category]"
                 value="Rooms"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -66,11 +65,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="iconic-cities"
                 name="listing[category]"
                 value="Iconic-Cities"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -82,11 +80,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="mountains"
                 name="listing[category]"
                 value="Mountains"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -98,11 +95,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="castles"
                 name="listing[category]"
                 value="Castles"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -114,11 +110,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="boat"
                 name="listing[category]"
                 value="Boat"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -130,11 +125,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="ski-in-out"
                 name="listing[category]"
                 value="Ski-in-out"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -146,11 +140,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="apartment"
                 name="listing[category]"
                 value="Apartment"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -162,11 +155,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="new"
                 name="listing[category]"
                 value="New"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -178,11 +170,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="woodlands"
                 name="listing[category]"
                 value="Woodlands"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -194,11 +185,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="lake"
                 name="listing[category]"
                 value="Lake"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -212,11 +202,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="amazing-pools"
                 name="listing[category]"
                 value="Amazing-Pools"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -228,11 +217,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="cabins"
                 name="listing[category]"
                 value="Cabins"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -244,11 +232,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="camping"
                 name="listing[category]"
                 value="Camping"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -260,11 +247,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="farm"
                 name="listing[category]"
                 value="Farm"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -276,11 +262,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="arctic"
                 name="listing[category]"
                 value="Arctic"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -292,11 +277,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="beach"
                 name="listing[category]"
                 value="Beach"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -308,11 +292,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="countryside"
                 name="listing[category]"
                 value="Countryside"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -325,11 +308,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="bed-and-breakfasts"
                 name="listing[category]"
                 value="Bed-and-Breakfasts"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -341,11 +323,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="campsite"
                 name="listing[category]"
                 value="Campsite"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -357,11 +338,10 @@
             <div class="form-check mb-3">
               <input
                 class="form-check-input"
-                type="radio"
+                type="checkbox"
                 id="historical-homes"
                 name="listing[category]"
                 value="Historical-Homes"
-                required
               />
               <label
                 class="form-check-label d-flex align-items-center"
@@ -372,7 +352,7 @@
             </div>
           </div>
         </div>
-        <div class="invalid-feedback">Choose Category</div>
+        <div class="invalid-feedback">Please choose at least one category.</div>
       </div>
 
       <div class="row">
