--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,33 +1,35 @@
-<% layout("/layouts/boilerplate") %>
+<% layout("/layouts/boilerplate.ejs") %>
 
-<div class="row mt-3">
-  <h1 class="col-8 offset-3">Login</h1>
-  <hr />
-  <div class="col-8 offset-3">
-    <form action="/login" method="POST" novalidate class="needs-validation">
+<div class="auth-container">
+  <div class="auth-card">
+    <h1 class="auth-title">Login</h1>
+    <form action="/login" method="POST" class="needs-validation" novalidate>
       <div class="mb-3">
-        <label for="username" class="form-label">Username:</label>
+        <label for="username" class="form-label">Username</label>
         <input
+          type="text"
           name="username"
           id="username"
-          type="text"
           class="form-control"
           required
         />
+        <div class="invalid-feedback">Please enter your username.</div>
       </div>
-
       <div class="mb-3">
-        <label for="password" class="form-label">Password:</label>
+        <label for="password" class="form-label">Password</label>
         <input
+          type="password"
           name="password"
           id="password"
-          type="password"
           class="form-control"
           required
         />
+        <div class="invalid-feedback">Please enter your password.</div>
       </div>
-
-      <button type="submit" class="btn btn-primary">Login</button>
+      <button type="submit" class="btn w-100">Login</button>
+      <div class="form-text">
+        Don't have an account? <a href="/signup">Sign Up</a>
+      </div>
     </form>
   </div>
 </div>
