--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,50 +1,47 @@
-<% layout("/layouts/boilerplate") %>
+<% layout("/layouts/boilerplate.ejs") %>
 
-<div class="row mt-3">
-  <h1 class="col-8 offset-3">Signup on Wonderlust!</h1>
-  <hr />
-  <div class="col-8 offset-3">
-    <form action="/signup" method="POST" novalidate class="needs-validation">
+<div class="auth-container">
+  <div class="auth-card">
+    <h1 class="auth-title">Sign Up</h1>
+    <form action="/signup" method="POST" class="needs-validation" novalidate>
       <div class="mb-3">
-        <label for="username" class="form-label">Username:</label>
+        <label for="username" class="form-label">Username</label>
         <input
+          type="text"
           name="username"
           id="username"
-          type="text"
           class="form-control"
           required
         />
         <div class="valid-feedback">Looks good!</div>
-        <div class="invalid-feedback">Please fill out this field</div>
+        <div class="invalid-feedback">Please choose a username.</div>
       </div>
-
       <div class="mb-3">
-        <label for="email" class="form-label">Email:</label>
+        <label for="email" class="form-label">Email</label>
         <input
+          type="email"
           name="email"
           id="email"
-          type="email"
           class="form-control"
           required
         />
-        <div class="valid-feedback">Looks good!</div>
-        <div class="invalid-feedback">Please fill out this field</div>
+        <div class="invalid-feedback">Please enter a valid email.</div>
       </div>
-
       <div class="mb-3">
-        <label for="password" class="form-label">Password:</label>
+        <label for="password" class="form-label">Password</label>
         <input
+          type="password"
           name="password"
           id="password"
-          type="password"
           class="form-control"
           required
         />
-        <div class="valid-feedback">Looks good!</div>
-        <div class="invalid-feedback">Please fill out this field</div>
+        <div class="invalid-feedback">Please enter a password.</div>
       </div>
-
-      <button type="submit" class="btn btn-primary">Sign Up</button>
+      <button type="submit" class="btn w-100">Sign Up</button>
+      <div class="form-text">
+        Already have an account? <a href="/login">Login</a>
+      </div>
     </form>
   </div>
 </div>
